--- a/wp-content/themes/cocoon-child-master/scss/lp/components/_feature-row.scss
+++ b/wp-content/themes/cocoon-child-master/scss/lp/components/_feature-row.scss
@@ -114,7 +114,8 @@
   color: v.$color-text;
 
   @include m.sp {
-    margin-left: 40px;
+    margin-left: 0;
+    margin-top: 12px;
   }
 }
 
@@ -124,6 +125,10 @@
   display: flex;
   justify-content: center;
   min-width: 0;
+
+  @include m.sp {
+    width: 100%;
+  }
 }
 
 .lp-feature-row__callout {
@@ -142,7 +147,15 @@
   text-align: center;
 
   @include m.sp {
-    margin-left: 40px;
+    margin-left: 0;
+    margin-top: 0;
+    font-size: 12px;
+  }
+}
+
+.lp-feature-row__callout-break {
+  @include m.sp {
+    display: none;
   }
 }
 
@@ -187,8 +200,12 @@
 
 .lp-feature-row__mockup {
   position: absolute;
+  left: 0;
+  top: 0;
   z-index: 1;
   display: block;
+  width: 100%;
+  height: 100%;
 }
 
 
